--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ body {
     box-sizing: border-box;
     background-color: var(--Main-dark-blue);
     font-family: 'Outfit';
+    min-width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 p {
@@ -29,7 +35,6 @@ p {
 
 .container {
     width: 300px;
-    margin: 60px auto;
     padding: 25px 25px;
     background-color: var(--Card-dark-blue);
     border-radius: 20px;
